updated menubar styles

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -65,3 +65,7 @@ width: -webkit-fill-available;
 :root {
   --top-menu-height: 48px; 
 }
+
+.modal-background-color{
+  background-color: #7f7f7f;
+}
