--- a/src/app/Components/TableComponents/TableBody/TableBody.scss
+++ b/src/app/Components/TableComponents/TableBody/TableBody.scss
@@ -25,9 +25,14 @@
   }
 
 .table-header {
-    background-color: #f2f3f3 !important;
+
+    background-color: #d3deef !important;
+    
 }
 
-.table-header-style {
-    background-color: #0d7d7d !important;
+.table-header-style th{
+
+    background-color: #d3deef !important;
+
 }
+
