updated table styles

--- a/src/app/Components/TableComponents/TableBody/TableBody.scss
+++ b/src/app/Components/TableComponents/TableBody/TableBody.scss
@@ -19,8 +19,8 @@
   }
 
   .table-body-size {
-      width: calc(92vw - 180px);
-      height: calc(97svh - 162px);
+    //   width: calc(92vw - 180px);
+    //   height: calc(97svh - 162px);
       overflow: scroll;
   }
 
