--- a/src/app/Components/TableComponents/TableBody/TableBody.scss
+++ b/src/app/Components/TableComponents/TableBody/TableBody.scss
@@ -26,13 +26,13 @@
 
 .table-header {
 
-    background-color: #d3deef !important;
+    background-color: #aeceff !important;
     
 }
 
 .table-header-style th{
 
-    background-color: #d3deef !important;
+    background-color: #aeceff !important;
 
 }
 
