--- a/src/app/Components/TableComponents/TableFilter/TableFilter.scss
+++ b/src/app/Components/TableComponents/TableFilter/TableFilter.scss
@@ -14,14 +14,14 @@
     font-weight: 500;
 }
 
-.filter-buttons button {
-    padding: 10px 20px;
-    background-color: #007BFF;
-    border: none;
-    color: white;
-    cursor: pointer;
-    border-radius: 5px;
-}
+// .filter-buttons button {
+//     padding: 10px 20px;
+//     background-color: #007BFF;
+//     border: none;
+//     color: white;
+//     cursor: pointer;
+//     border-radius: 5px;
+// }
 
 .filter-buttons button:hover {
     background-color: #0056b3;
