--- a/src/app/Dashboard/Practices/page.scss
+++ b/src/app/Dashboard/Practices/page.scss
@@ -1,7 +1,8 @@
 .grid-container {
     display: grid;
     grid-template-columns: auto auto auto auto;
-    background-color: #2196F3;
-    padding: 10px;
-    gap: 10px;
+    padding: 15px;
+    gap: 15px;
+    overflow-y: auto !important;
+    height:83%;
 }
