--- a/src/app/Dashboard/PracticeDashboard/practiceDashboard.scss
+++ b/src/app/Dashboard/PracticeDashboard/practiceDashboard.scss
@@ -15,8 +15,13 @@
     overflow-y: auto !important;
     overflow-x: hidden;
     height:80%;
+
+}
+
+.height-30{
+    height: 30%;
 }
 
 .discussion-height{
-    height: 33%;
+    height: 27%;
 }
