--- a/src/app/Components/JoinedGroupList/JoinedGroupList.scss
+++ b/src/app/Components/JoinedGroupList/JoinedGroupList.scss
@@ -37,13 +37,14 @@
 
                 .chat-count {
                     position: absolute;
-                    top: -5px;
+                    top: -7px;
                     right: -10px;
                     background: #ff4d4d;
                     color: #fff;
                     font-size: 12px;
                     font-weight: bold;
-                    padding: 3px 7px;
+                    width:24px;
+                    height: 24px;
                     border-radius: 50%;
                     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
                 }
