--- a/src/app/Components/DiscussionListCard/DiscussionListCard.scss
+++ b/src/app/Components/DiscussionListCard/DiscussionListCard.scss
@@ -1,10 +1,6 @@
 .technology-list {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: #f9f9f9;
-    border: 1px solid #ddd;
-    border-radius: 8px;
+
+    padding: 15px;
 
     .list-heading {
         font-size: 24px;
@@ -17,7 +13,7 @@
         list-style-type: none;
         padding: 0;
 
-        .group-item {
+        .discussion-item {
             margin-bottom: 20px;
             padding: 15px;
             background: #fff;
