--- a/src/app/Components/JoinedGroupList/JoinedGroupList.scss
+++ b/src/app/Components/JoinedGroupList/JoinedGroupList.scss
@@ -7,7 +7,6 @@
 
         .joined-group {
             display: flex;
-            flex-direction: column;
             align-items: center;
             justify-content: space-between;
             background: #fff;
@@ -18,10 +17,17 @@
             text-align: center;
 
             .group-header h2 {
-                font-size: 18px;
-                color: #333;
-                margin: 0;
+                font-size: 20px;
                 margin-bottom: 10px;
+            }
+
+            .group-name-style{
+                color: #007bff;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                max-width: 100px;
+                min-width: 100px;
             }
 
             .group-notification {
@@ -30,10 +36,6 @@
                 align-items: center;
                 justify-content: center;
 
-                .bell-icon {
-                    font-size: 24px;
-                    color: #007bff;
-                }
 
                 .chat-count {
                     position: absolute;
@@ -41,10 +43,10 @@
                     right: -10px;
                     background: #ff4d4d;
                     color: #fff;
-                    font-size: 11px;
+                    font-size: 10px;
                     font-weight: bold;
-                    width: 23px;
-                    height: 23px;
+                    width: 21px;
+                    height: 21px;
                     border-radius: 50%;
                     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
                     display: flex;
