--- a/src/app/Components/JoinedGroupList/JoinedGroupList.scss
+++ b/src/app/Components/JoinedGroupList/JoinedGroupList.scss
@@ -10,7 +10,6 @@
             align-items: center;
             justify-content: space-between;
             background: #fff;
-            padding: 10px;
             border: 1px solid #ddd;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -18,11 +17,11 @@
 
             .group-header h2 {
                 font-size: 20px;
+                color: #007bff !important;
                 margin-bottom: 10px;
             }
 
             .group-name-style{
-                color: #007bff;
                 white-space: nowrap;
                 overflow: hidden;
                 text-overflow: ellipsis;
