updated chat section

--- a/src/app/Dashboard/DiscussionDashboard/DiscussionDashboard.scss
+++ b/src/app/Dashboard/DiscussionDashboard/DiscussionDashboard.scss
@@ -17,6 +17,10 @@
     // }
 }
 
+.comment-section-height{
+    height: 90%;
+}
+
 //////////////////////////////////
 
 .discussion-tabs span:not(:last-child)::after {
