--- a/src/app/Components/TableComponents/TableBody/TableBody.scss
+++ b/src/app/Components/TableComponents/TableBody/TableBody.scss
@@ -14,7 +14,7 @@
       }
 
       .products-details:nth-child(even) td {
-          background-color: #fafbfb;
+          background-color: #FAFAFA;
       }
   }
 
@@ -26,13 +26,14 @@
 
 .table-header {
 
-    background-color: #aeceff !important;
+    background-color: #455A64 !important;
     
 }
 
 .table-header-style th{
 
-    background-color: #aeceff !important;
+    background-color: #455A64 !important;
+    color:white;
 
 }
 
