--- a/src/app/Dashboard/Practices/page.scss
+++ b/src/app/Dashboard/Practices/page.scss
@@ -1,8 +1,13 @@
-.grid-container {
+
+
+
+.practice-grid-container {
     display: grid;
-    grid-template-columns: auto auto auto auto;
-    padding: 15px;
     gap: 15px;
+    padding: 15px;
     overflow-y: auto !important;
-    height:98%;
-}
+    height: 98%;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  }
+  
+  
