--- a/src/app/Components/DiscussionListCard/DiscussionListCard.scss
+++ b/src/app/Components/DiscussionListCard/DiscussionListCard.scss
@@ -20,6 +20,13 @@
             border: 1px solid #ddd;
             border-radius: 8px;
 
+            .discussion-description-style{
+                white-space: nowrap;
+                text-overflow: ellipsis;
+                overflow: hidden;
+                max-width: 95%;
+            }
+
             h2 {
                 font-size: 20px;
                 margin-bottom: 8px;
