--- a/src/app/Components/DiscussionListCard/DiscussionListCard.scss
+++ b/src/app/Components/DiscussionListCard/DiscussionListCard.scss
@@ -24,7 +24,7 @@
                 white-space: nowrap;
                 text-overflow: ellipsis;
                 overflow: hidden;
-                max-width: 95%;
+                max-width: 400px;
             }
 
             h2 {
