updated practice dashboard style

--- a/src/app/Dashboard/PracticeDashboard/PracticeDashboardClient/practiceDashboard.scss
+++ b/src/app/Dashboard/PracticeDashboard/PracticeDashboardClient/practiceDashboard.scss
@@ -6,6 +6,9 @@
 //     overflow-y: auto !important;
 //     height: 98%;
 // }
+.practice-dashboard-background-color{
+    background-color: #EDF0F4;
+}
 
 .grid-container {
     display: grid;
@@ -23,7 +26,7 @@
 }
 
 .recent-discussion-height{
-    height: 48.3%;
+    height: 52.5%;
 }
 
 .height-30{
