--- a/src/app/Components/DiscussionListCard/DiscussionListCard.scss
+++ b/src/app/Components/DiscussionListCard/DiscussionListCard.scss
@@ -53,6 +53,10 @@
             .button-width{
                 width: 83px;
             }
+
+            .edit-button-style{
+                width: 72px;
+            }
         }
     }
 }
