--- a/src/app/Components/ChatSection/ChatSection.scss
+++ b/src/app/Components/ChatSection/ChatSection.scss
@@ -65,12 +65,18 @@
 }
 
 .chat-input {
-    display: flex;
+    display: flex ;
     padding: 10px;
-    border-top: 1px solid #ddd;
+    border-top: none;
     background-color: #fff;
     align-items: center;
     gap: 10px;
+}
+
+.chat-input-section{
+    border-top: 1px solid #ddd;
+    background-color: #fff;
+    align-items: center; 
 }
 
 .input-box {
